Fix banner and login page alignment

--- a/packages/cd-components/src/atoms/banner/banner.module.scss
+++ b/packages/cd-components/src/atoms/banner/banner.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables/colors";
+@import "../../styles/variables/fonts";
 
 .container {
   background-color: $primary-blue;
@@ -18,7 +19,9 @@
   .feature_list {
     display: flex;
     flex-direction: column;
-    margin-top: 6rem;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10rem;
     margin-left: 4.5rem;
 
     .feature {
@@ -39,7 +42,7 @@
 
       .text {
         color: white;
-        font-size: 1.1rem;
+        font-size: $large;
         font-weight: 600;
         margin-left: 1rem;
         width: 70%;
